<resources>
    <string name="app_name">Pinch</string>
    <string name="couple">Couple</string>
    <string name="story">Story</string>
    <string name="days">days</string>
    <string name="days_before">days before</string>
    <string name="upcoming_event">Upcoming Event</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="together_for">Together For</string>
    <string name="couple_settings">Couple Settings</string>
    <string name="change_starting_date">Change starting date</string>
</resources>
