<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewOverley"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/overlayColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <me.chanyeinthaw.pinch.customviews.NavButton
        android:id="@+id/buttonStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:visibility="visible"
        app:isActive="false"
        app:label="@string/story"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCouple"
        app:layout_constraintStart_toEndOf="@+id/buttonCouple"
        app:layout_constraintTop_toTopOf="@+id/buttonCouple" />

    <me.chanyeinthaw.pinch.customviews.NavButton
        android:id="@+id/buttonCouple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        app:isActive="true"
        app:label="@string/couple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewOverley" />

    <ImageView
        android:id="@+id/iconSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/settings"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/navHostFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_white_24" />

    <fragment
        android:id="@+id/navHostFragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCouple"
        app:navGraph="@navigation/navigation" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="iconSettings,buttonStory,buttonCouple" />

</androidx.constraintlayout.widget.ConstraintLayout>