<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".couple.CoupleFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewTransparent"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayoutCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <View
                    android:id="@+id/viewLine"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/overlayColor"
                    app:layout_constraintEnd_toEndOf="@+id/textViewUpcomingEvent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/textViewUpcomingEvent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewUpcomingEvent" />

                <TextView
                    android:id="@+id/textViewUpcomingEvent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/upcoming_event"
                    android:text="@string/upcoming_event"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/upcoming_event" />

                <TextView
                    android:id="@+id/textViewDaysNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textViewUpcomingEvent"
                    app:layout_constraintTop_toBottomOf="@+id/viewLine"
                    tools:text="200" />

                <TextView
                    android:id="@+id/textViewDays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:contentDescription="@string/days"
                    android:text="@string/days"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewDaysNumber"
                    app:layout_constraintStart_toEndOf="@+id/textViewDaysNumber"
                    app:layout_constraintTop_toTopOf="@+id/textViewDaysNumber"
                    tools:text="@string/days" />

                <TextView
                    android:id="@+id/textViewDaysBefore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/days_before"
                    android:text="@string/days_before"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/textViewDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewLine"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="@string/days_before" />

                <TextView
                    android:id="@+id/textViewDaysBeforeNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/textViewDaysBefore"
                    app:layout_constraintEnd_toStartOf="@+id/textViewDaysBefore"
                    app:layout_constraintTop_toTopOf="@+id/textViewDaysBefore"
                    tools:text="80" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="6dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewDaysBefore"
                    tools:text="October 20, 2020 (Tue)" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewTotalDays"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/imageViewHoney"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="6M 20D" />

    <TextView
        android:id="@+id/textViewHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/together_for"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/textViewTotalDays"
        app:layout_constraintEnd_toEndOf="@+id/textViewTotalDays"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalDays" />

    <TextView
        android:id="@+id/textViewFooter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/textViewTotalDays"
        app:layout_constraintStart_toStartOf="@+id/textViewTotalDays"
        app:layout_constraintTop_toBottomOf="@+id/textViewTotalDays"
        tools:text="Oct 20, 2019" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/couple"
        android:src="@drawable/ic_heart_white_24"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewHoney"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageViewHoney" />

    <me.chanyeinthaw.pinch.couple.views.CircularImageView
        android:id="@+id/imageViewHoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="52dp"
        app:layout_constraintBottom_toTopOf="@+id/cardViewTransparent"
        app:layout_constraintEnd_toStartOf="@+id/imageView">

    </me.chanyeinthaw.pinch.couple.views.CircularImageView>

    <TextView
        android:id="@+id/textViewHoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageViewHoney"
        app:layout_constraintStart_toStartOf="@+id/imageViewHoney"
        app:layout_constraintTop_toBottomOf="@+id/imageViewHoney"
        tools:text="Chan" />

    <me.chanyeinthaw.pinch.couple.views.CircularImageView
        android:id="@+id/imageViewBabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewHoney"
        app:layout_constraintStart_toEndOf="@+id/imageView">

    </me.chanyeinthaw.pinch.couple.views.CircularImageView>

    <TextView
        android:id="@+id/textViewBabe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBabe"
        app:layout_constraintStart_toStartOf="@+id/imageViewBabe"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBabe"
        tools:text="Nyein" />

</androidx.constraintlayout.widget.ConstraintLayout>